<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/cardview_shadow_end_color"
        app:strokeWidth="@dimen/cardview_compat_inset_shadow">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/txtNbFacilitiesForMK1Belt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9"
                    app:layout_constraintStart_toStartOf="@+id/txtFacilityType"
                    app:layout_constraintBottom_toBottomOf="@id/lblNbFacilitiesForMK1Belt"
                    app:layout_constraintTop_toTopOf="@id/lblNbFacilitiesForMK1Belt"/>
            <TextView
                    android:id="@+id/txtNbFacilitiesForMK2Belt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9"
                    app:layout_constraintStart_toStartOf="@+id/txtFacilityType"
                    app:layout_constraintTop_toTopOf="@id/lblNbFacilitiesForMK2Belt"
                    app:layout_constraintBottom_toBottomOf="@id/lblNbFacilitiesForMK2Belt"/>
            <TextView
                    android:id="@+id/txtNbFacilitiesForMK3Belt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9"
                    app:layout_constraintStart_toStartOf="@+id/txtFacilityType"
                    app:layout_constraintBottom_toBottomOf="@id/lblNbFacilitiesForMK3Belt"
                    app:layout_constraintTop_toTopOf="@id/lblNbFacilitiesForMK3Belt"/>
            <ImageView
                    android:id="@+id/imgRecipe"
                    android:layout_width="75dp"
                    android:layout_height="78dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    tools:srcCompat="@android:drawable/btn_dialog" android:importantForAccessibility="no"/>

            <TextView
                    android:id="@+id/lblFacilityType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FacilitiesOfType"
                    app:layout_constraintBottom_toTopOf="@+id/lblFacilityNeeded"
                    app:layout_constraintStart_toStartOf="@+id/lblConsumption"
                    app:layout_constraintTop_toBottomOf="@+id/lblConsumption"/>

            <TextView
                    android:id="@+id/lblProduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/Production"
                    app:layout_constraintBottom_toTopOf="@+id/lblConsumption"
                    app:layout_constraintStart_toEndOf="@+id/imgRecipe"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/lblFacilityNeeded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FacilitiesNeeded"
                    app:layout_constraintStart_toStartOf="@+id/lblFacilityType"
                    app:layout_constraintTop_toBottomOf="@+id/lblFacilityType"
                    app:layout_constraintBottom_toTopOf="@+id/lblNbFacilitiesForMK1Belt"/>

            <TextView
                    android:id="@+id/lblNbFacilitiesForMK1Belt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NbFacilitiesForMK1Belt"
                    app:layout_constraintStart_toStartOf="@id/lblFacilityNeeded"
                    app:layout_constraintTop_toBottomOf="@+id/lblFacilityNeeded"
            />
            <TextView
                    android:id="@+id/lblNbFacilitiesForMK2Belt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NbFacilitiesForMK2Belt"
                    app:layout_constraintStart_toStartOf="@id/lblFacilityNeeded"
                    app:layout_constraintTop_toBottomOf="@id/lblNbFacilitiesForMK1Belt"
            />
            <TextView
                    android:id="@+id/lblNbFacilitiesForMK3Belt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NbFacilitiesForMK3Belt"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/lblNbFacilitiesForMK2Belt"
                    app:layout_constraintTop_toBottomOf="@id/lblNbFacilitiesForMK2Belt"
            />
            <TextView
                    android:id="@+id/lblConsumption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Consumption"
                    app:layout_constraintBottom_toTopOf="@+id/lblFacilityType"
                    app:layout_constraintStart_toStartOf="@+id/lblProduction"
                    app:layout_constraintTop_toBottomOf="@+id/lblProduction"/>

            <TextView
                    android:id="@+id/txtProductionRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="22568"
                    app:layout_constraintStart_toEndOf="@id/lblNbFacilitiesForMK1Belt"
                    app:layout_constraintTop_toTopOf="@id/lblProduction"
                    app:layout_constraintBottom_toBottomOf="@id/lblProduction"/>

            <TextView
                    android:id="@+id/txtConsumptionRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="21684"
                    app:layout_constraintBottom_toTopOf="@id/lblConsumption"
                    app:layout_constraintStart_toStartOf="@+id/txtProductionRate"
                    app:layout_constraintTop_toBottomOf="@id/lblConsumption"/>

            <TextView
                    android:id="@+id/txtFacilityType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Assembler"
                    app:layout_constraintBottom_toTopOf="@id/lblFacilityType"
                    app:layout_constraintStart_toStartOf="@+id/txtConsumptionRate"
                    app:layout_constraintTop_toBottomOf="@id/lblFacilityType"/>

            <TextView
                    android:id="@+id/txtFacilityNeeded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="89"
                    app:layout_constraintStart_toStartOf="@+id/txtFacilityType"
                    app:layout_constraintTop_toBottomOf="@id/lblFacilityNeeded"
                    app:layout_constraintBottom_toTopOf="@id/lblFacilityNeeded"/>

            <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    app:layout_constraintBottom_toBottomOf="@+id/txtProductionRate"
                    app:layout_constraintStart_toEndOf="@+id/txtProductionRate"
                    app:layout_constraintTop_toTopOf="@+id/txtProductionRate"/>

            <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    app:layout_constraintStart_toEndOf="@+id/txtConsumptionRate"
                    app:layout_constraintTop_toTopOf="@+id/txtConsumptionRate"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>